@@ -22,8 +22,6 @@ namespace
 {
     struct Driver : public virtual MeterCommonImplementation {
         Driver(MeterInfo &mi, DriverInfo &di);
-    private:
-        double consumption_at_set_date_kWh_[16];
     };
 
     static bool ok = registerDriver([](DriverInfo&di)
@@ -151,7 +149,7 @@ namespace
             "Status and error flags.",
             PrintProperty::JSON | PrintProperty::FIELD,
             FieldMatcher::build()
-            .set(VIFRange::ErrorFlags),            
+            .set(VIFRange::ErrorFlags),
             {
                 {
                     {
@@ -183,7 +181,7 @@ namespace
             .set(VIFRange::Date)
             .set(StorageNr(1))
             );
-        
+
         addNumericFieldWithExtractor(
             "energy_consumption_at_reporting_date",
             "The energy consumption at the last billing period date.",
@@ -198,23 +196,19 @@ namespace
 
         for (int i=1; i<=15; ++i)
         {
-            string msg, info;
-            strprintf(msg, "consumption_%d_months_ago", i);
-            strprintf(info, "Energy consumption %d month(s) ago.", i);
+            string name, info;
+            strprintf(&name, "consumption_%d_months_ago", i);
+            strprintf(&info, "Energy consumption %d month(s) ago.", i);
             addNumericFieldWithExtractor(
-                msg,
-                Quantity::Energy,
-                NoDifVifKey,
-                VifScaling::Auto,
-                MeasurementType::Instantaneous,
-                VIFRange::AnyEnergyVIF,
-                StorageNr(i*2),
-                TariffNr(0),
-                IndexNr(1),
-                PrintProperty::JSON| PrintProperty::OPTIONAL,
+                name,
                 info,
-                SET_FUNC(consumption_at_set_date_kWh_[i], Unit::KWH),
-                GET_FUNC(consumption_at_set_date_kWh_[i], Unit::KWH));
+                PrintProperty::JSON| PrintProperty::OPTIONAL,
+                Quantity::Energy,
+                VifScaling::Auto,
+                FieldMatcher::build()
+                .set(MeasurementType::Instantaneous)
+                .set(VIFRange::AnyEnergyVIF)
+                .set(StorageNr(i)));
         }
     }
 }
@@ -222,11 +216,11 @@ namespace
 // Test: Heat sensostar 20480057 NOKEY
 // Comment:
 // telegram=|68B3B36808007257004820c51400046c100000047839803801040600000000041300000000042B00000000142B00000000043B00000000143B00000000025B1400025f15000261daff02235c00046d2c2ddc24440600000000441300000000426c000001fd171003fd0c05000084200600000000c420060000000084300600000000c430060000000084401300000000c44013000000008480401300000000c48040130000000084c0401300000000c4c0401300000000a216|
-// {"media":"heat","meter":"sensostar","name":"Heat","id":"20480057","meter_timestamp":"2022-04-28 13:44","total_kwh":0,"power_kw":0,"power_max_kw":0,"flow_water_m3h":0,"flow_water_max_m3h":0,"forward_c":20,"return_c":21,"difference_c":-0.38,"total_water_m3":0,"current_status":"FLOW_METER_FAILURE","reporting_date":"2000-00-00","energy_consumption_at_reporting_date_kwh":0,"consumption_1_months_ago_kwh":0,"consumption_2_months_ago_kwh":0,"consumption_3_months_ago_kwh":0,"consumption_4_months_ago_kwh":0,"consumption_5_months_ago_kwh":0,"consumption_6_months_ago_kwh":0,"consumption_7_months_ago_kwh":0,"consumption_8_months_ago_kwh":0,"consumption_9_months_ago_kwh":0,"consumption_10_months_ago_kwh":0,"consumption_11_months_ago_kwh":0,"consumption_12_months_ago_kwh":0,"consumption_13_months_ago_kwh":0,"consumption_14_months_ago_kwh":0,"consumption_15_months_ago_kwh":0,"timestamp":"1111-11-11T11:11:11Z"}
+// {"media":"heat","meter":"sensostar","name":"Heat","id":"20480057","meter_timestamp":"2022-04-28 13:44","total_kwh":0,"power_kw":0,"power_max_kw":0,"flow_water_m3h":0,"flow_water_max_m3h":0,"forward_c":20,"return_c":21,"difference_c":-0.38,"total_water_m3":0,"current_status":"ERROR_FLOW_MEASUREMENT_SYSTEM_ERROR","reporting_date":"2000-00-00","energy_consumption_at_reporting_date_kwh":0,"consumption_1_months_ago_kwh":0,"timestamp":"1111-11-11T11:11:11Z"}
 // |Heat;20480057;0.000000;0.000000;ERROR_FLOW_MEASUREMENT_SYSTEM_ERROR;2000-00-00;0.000000;1111-11-11 11:11.11
 
 // Test: WMZ sensostar 02752560 NOKEY
-// Comment: from "Sensostar U"  
+// Comment: from "Sensostar U"
 //telegram=a444c5146025750200047ac20000202f2f046d2e26c62a040643160000041310f0050001fd1700426cbf2c4406570e00008401061f160000840206f6150000840306f5150000840406f3150000840506ea150000840606bf1500008407065214000084080692120000840906c5100000840a06570e0000840b06ca0b0000840c06da090000840d06ca080000840e06c8080000840f06c608000003fd0c05010002fd0b2111
 //{"media":"heat","meter":"sensostar","name":"WMZ","id":"02752560","meter_timestamp":"2022-10-06 06:46","total_kwh":5699,"total_water_m3":389.136,"current_status":"OK","reporting_date":"2021-12-31","energy_consumption_at_reporting_date_kwh":3671,"consumption_1_months_ago_kwh":5663,"consumption_2_months_ago_kwh":5622,"consumption_3_months_ago_kwh":5621,"consumption_4_months_ago_kwh":5619,"consumption_5_months_ago_kwh":5610,"consumption_6_months_ago_kwh":5567,"consumption_7_months_ago_kwh":5202,"consumption_8_months_ago_kwh":4754,"consumption_9_months_ago_kwh":4293,"consumption_10_months_ago_kwh":3671,"consumption_11_months_ago_kwh":3018,"consumption_12_months_ago_kwh":2522,"consumption_13_months_ago_kwh":2250,"consumption_14_months_ago_kwh":2248,"consumption_15_months_ago_kwh":2246,"timestamp":"1111-11-11 11:11.11"}
 //WMZ;02752560;5699.000000;389.136000;OK;1111-11-11 11:11.11
